--- a/templates/home.html
+++ b/templates/home.html
@@ -161,10 +161,10 @@
         <div class="contributors">
             <p>Contributors:</p>
             <p>
-                <a href="https://www.linkedin.com/in/contributor1" target="_blank">Sandeep</a> |
+                <a href="https://www.linkedin.com/in/sandeepnallamothu/" target="_blank">Sandeep</a> |
                 <a href="https://www.linkedin.com/in/naga-venkata-gopi/" target="_blank">Naga Venkata Gopi</a> |
                 <a href="https://www.linkedin.com/in/saitejalasmi/" target="_blank">Sai Teja</a> |
-                <a href="www.linkedin.com/in/ashrith-kumar-manne-85b616147" target="_blank">Ashrith</a> |
+                <a href="https://www.linkedin.com/in/ashrith-kumar-manne-85b616147?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank">Ashrith</a> |
                 <a href="https://www.linkedin.com/in/vadlakarthikchary/" target="_blank">Karthik</a> |
                 <a href="https://www.linkedin.com/in/yenugugouthamreddy" target="_blank">Gautham</a> |
                 <a href="https://www.linkedin.com/in/hariharan-ummadisetti-39653a202/?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank">Hariharan</a>
