--- a/templates/home.html
+++ b/templates/home.html
@@ -166,7 +166,7 @@
                 <a href="https://www.linkedin.com/in/saitejalasmi/" target="_blank">Sai Teja</a> |
                 <a href="https://www.linkedin.com/in/ashrith-kumar-manne-85b616147?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank">Ashrith</a> |
                 <a href="https://www.linkedin.com/in/vadlakarthikchary/" target="_blank">Karthik</a> |
-                <a href="https://www.linkedin.com/in/yenugugouthamreddy" target="_blank">Gautham</a> |
+                <a href="https://www.linkedin.com/in/yenugugouthamreddy" target="_blank">Goutham</a> |
                 <a href="https://www.linkedin.com/in/hariharan-ummadisetti-39653a202/?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank">Hariharan</a>
             </p>
         </div>
